# GlassBoxAI-GNN

./: README.md  facaded_gnn.cu  facaded_gnn_opencl.cpp  gnn.cpp  gnn.cu  gnn_opencl.cpp  test_gnn.sh  test_gnn_cuda.sh  test_gnn_rust_cuda.sh
rust_cuda/: Cargo.toml
rust_cuda/src/: main.rs
rust_cuda_facade/: Cargo.toml
rust_cuda_facade/gui/: Cargo.toml  build.rs
rust_cuda_facade/gui/kani_proofs/: Cargo.toml  README.md  VERIFICATION_REPORT.md
rust_cuda_facade/gui/kani_proofs/src/: lib.rs
rust_cuda_facade/gui/qml/: main.qml
rust_cuda_facade/gui/src/: gnn_bridge.rs  gnn_facade.rs  main.rs
rust_cuda_facade/kani_proofs/: Cargo.toml  README.md  VERIFICATION_REPORT.md
rust_cuda_facade/kani_proofs/src/: lib.rs
rust_cuda_facade/src/: main.rs
